--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
     <div class="wrapper">
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
-        
+        <center>
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
@@ -24,15 +24,15 @@
           <!-- {{ site.description | default: site.github.project_tagline }} -->
 <a href="http://blog.hcr2.info">Changes</a> - <a href="http://wiki.hcr2.info">Wiki</a> - <a href="http://faq.hcr2.info">FAQ</a> - <a href="http://memes.hcr2.info">FS Memes</a> - <a href="https://fingersoft.com/news/">FS News</a> - <a href="https://mobile.twitter.com/HCR_Official_">FS Tweets</a> -  <a href="https://www.youtube.com/results?search_query=hill+climb+racing+2+hcr2">YouTube</a>  
 </p>
-
-        {% if site.github.is_project_page %}
+        </center>
+   <!--     {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
 
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
-
+-->
         {% if site.show_downloads %}
         <ul class="downloads">
           <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
