--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,10 +54,11 @@
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
   -->
 
+        <center>
         <p><a href="mailto:dadahcr2@gmail.com">dadahcr2@gmail.com</a> / dada#1710 / <a href="https://rentry.co/hcom1">Leave a comment</a></p>
         
         <p><a href=""><img src="https://media.discordapp.net/attachments/806343355264401478/841864986590576660/2A8C00CC-70A7-4510-8847-09C3360CA512.png?width=120&amp;height=120" alt="Gas Brake Go"/></a></p>
-
+        </center>
       </footer> 
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
