--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,12 +14,19 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
-        <center>
-        {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
-        {% endif %}
+          <center>
+<!--        <h1><a href="#_1">     
+          <a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a> 
 
+        </h1>
+      
+        {% if site.logo %}
+
+          <img src="{{site.logo | relative_url}}" alt="Logo" />
+        {% endif %} -->
+          <img src="https://cdn.discordapp.com/attachments/806343355264401478/820076457690398751/GBG-team-logo-125.png" alt="Gas Brake Go"/>
+          <img src="https://cdn.discordapp.com/attachments/806343355264401478/820420574589091860/image2.png" alt="Info"/>
+     
         <p>
           <!-- {{ site.description | default: site.github.project_tagline }} -->
 <a href="http://blog.hcr2.info">Changes</a> - <a href="http://wiki.hcr2.info">Wiki</a> - <a href="http://faq.hcr2.info">FAQ</a> - <a href="http://memes.hcr2.info">FS Memes</a> - <a href="https://fingersoft.com/news/">FS News</a> - <a href="https://mobile.twitter.com/HCR_Official_">FS Tweets</a> -  <a href="https://www.youtube.com/results?search_query=hill+climb+racing+2+hcr2">YouTube</a>  
