--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,13 @@
      
         <p>
           <!-- {{ site.description | default: site.github.project_tagline }} -->
-<a href="http://blog.hcr2.info">Changes</a> - <a href="http://wiki.hcr2.info">Wiki</a> - <a href="http://faq.hcr2.info">FAQ</a> - <a href="http://memes.hcr2.info">FS Memes</a> - <a href="https://fingersoft.com/news/">FS News</a> - <a href="https://mobile.twitter.com/HCR_Official_">FS Tweets</a> -  <a href="https://www.youtube.com/results?search_query=hill+climb+racing+2+hcr2">YouTube</a>  
+<a href="http://blog.hcr2.info">Changes</a> - <a href="http://memes.hcr2.info">Memes</a> - <a href="https://fingersoft.com/news/">News</a> - <a href="https://mobile.twitter.com/HCR_Official_">Tweets</a> -  <a href="https://www.youtube.com/results?search_query=hill+climb+racing+2+hcr2">YouTube</a>  
 </p>
+      
+          <li><a href="http://wiki.hcr2.info"><strong>wiki</strong></a></li>
+          <li><a href="http://faq.hcr2.info"><strong>faq</strong></a></li>
+          <li><a href="http://tips.hcr2.info"><strong>tips</strong></a></li>    
+        
         </center>
    <!--     {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
@@ -39,14 +44,14 @@
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
--->
+
         {% if site.show_downloads %}
         <ul class="downloads">
           <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
           <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
-        {% endif %}
+        {% endif %}-->
       </header>
       <section>
 
@@ -62,7 +67,7 @@
   -->
 
         <center>
-        <p><a href="mailto:dadahcr2@gmail.com">dadahcr2@gmail.com</a> / dada#1710 / <a href="https://rentry.co/hcom1">Leave a comment</a></p>
+        <p><a href="mailto:dadahcr2@gmail.com">Email</a> ~ dada#1710 ~ <a href="https://rentry.co/hcom1">Comment?</a></p>
         
         <p><a href=""><img src="https://media.discordapp.net/attachments/806343355264401478/841864986590576660/2A8C00CC-70A7-4510-8847-09C3360CA512.png?width=120&amp;height=120" alt="Gas Brake Go"/></a></p>
         </center>
