--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,9 +24,10 @@
 
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %} -->
+            <a href="/#top>
           <img src="https://cdn.discordapp.com/attachments/806343355264401478/820076457690398751/GBG-team-logo-125.png" alt="Gas Brake Go"/>
           <img src="https://cdn.discordapp.com/attachments/806343355264401478/820420574589091860/image2.png" alt="Info"/>
-     
+                                                                                                                       </a>
         <p>
           <!-- {{ site.description | default: site.github.project_tagline }} -->
 <a href="http://blog.hcr2.info">Changes</a> - <a href="http://memes.hcr2.info">Memes</a> - <a href="https://fingersoft.com/news/">News</a> - <a href="https://mobile.twitter.com/HCR_Official_">Tweets</a> -  <a href="https://www.youtube.com/results?search_query=hill+climb+racing+2+hcr2">YouTube</a>  
