--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,11 +33,12 @@
 <a href="http://blog.hcr2.info">Changes</a> - <a href="http://memes.hcr2.info">Memes</a> - <a href="https://fingersoft.com/news/">News</a> - <a href="https://mobile.twitter.com/HCR_Official_">Tweets</a> -  <a href="https://www.youtube.com/results?search_query=hill+climb+racing+2+hcr2">YouTube</a>  
 </p>
       
-          <li><a href="http://wiki.hcr2.info"><strong>wiki</strong></a></li>
-          <li><a href="http://faq.hcr2.info"><strong>faq</strong></a></li>
-          <li><a href="http://tips.hcr2.info"><strong>tips</strong></a></li>    
+          <li><a href="http://wiki.hcr2.info">hcr2 <strong>wiki</strong></a></li>
+          <li><a href="http://faq.hcr2.info">hcr2 <strong>faq</strong></a></li>
+          <li><a href="http://tips.hcr2.info">hcr2 <strong>tips</strong></a></li>    
         
         </center>
+                                                                                 
    <!--     {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
