--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
                                                                                                                        </a>
         <p>
           <!-- {{ site.description | default: site.github.project_tagline }} -->
-<a href="http://blog.hcr2.info">Changes</a> - <a href="http://memes.hcr2.info">Memes</a> - <a href="https://fingersoft.com/news/">News</a> - <a href="https://mobile.twitter.com/HCR_Official_">Tweets</a> -  <a href="https://www.youtube.com/results?search_query=hill+climb+racing+2+hcr2">YouTube</a>  
+<a href="http://blog.hcr2.info">Log</a> - <a href="http://memes.hcr2.info">Memes</a> - <a href="https://fingersoft.com/news/">News</a> - <a href="https://mobile.twitter.com/HCR_Official_">Twts</a> -  <a href="https://www.youtube.com/results?search_query=hill+climb+racing+2+hcr2">uTube</a>  
 </p>
       
           <li><a href="http://wiki.hcr2.info">hcr2 <strong>wiki</strong></a></li>
