--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,7 @@
 
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %} -->
-            <a href="/#top>
-          <img src="https://cdn.discordapp.com/attachments/806343355264401478/820076457690398751/GBG-team-logo-125.png" alt="Gas Brake Go"/>
+          <a href="#top"<img src="https://cdn.discordapp.com/attachments/806343355264401478/820076457690398751/GBG-team-logo-125.png" alt="Gas Brake Go"/>
           <img src="https://cdn.discordapp.com/attachments/806343355264401478/820420574589091860/image2.png" alt="Info"/>
                                                                                                                        </a>
         <p>
