--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,18 +24,16 @@
 
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %} -->
-          <a href="#top"<img src="https://cdn.discordapp.com/attachments/806343355264401478/820076457690398751/GBG-team-logo-125.png" alt="Gas Brake Go"/>
-          <img src="https://cdn.discordapp.com/attachments/806343355264401478/820420574589091860/image2.png" alt="Info"/>
-                                                                                                                       </a>
+          <a href="#top"><img src="https://cdn.discordapp.com/attachments/806343355264401478/820076457690398751/GBG-team-logo-125.png" alt="Gas Brake Go"/><img src="https://cdn.discordapp.com/attachments/806343355264401478/820420574589091860/image2.png" alt="Info"/></a>
         <p>
           <!-- {{ site.description | default: site.github.project_tagline }} -->
 <a href="http://blog.hcr2.info">Log</a> - <a href="http://memes.hcr2.info">Memes</a> - <a href="https://fingersoft.com/news/">News</a> - <a href="https://mobile.twitter.com/HCR_Official_">Twts</a> -  <a href="https://www.youtube.com/results?search_query=hill+climb+racing+2+hcr2">uTube</a>  
 </p>
-      
+      <ul class="downloads">
           <li><a href="http://wiki.hcr2.info">hcr2 <strong>wiki</strong></a></li>
           <li><a href="http://faq.hcr2.info">hcr2 <strong>faq</strong></a></li>
           <li><a href="http://tips.hcr2.info">hcr2 <strong>tips</strong></a></li>    
-        
+      </ul> 
         </center>
                                                                                  
    <!--     {% if site.github.is_project_page %}
