--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,27 +15,32 @@
     <div class="wrapper">
       <header>
           <center>
-<!--        <h1><a href="#_1">     
+        <h1><a href="#_1">     
           <a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a> 
 
         </h1>
-      
+<!--      
         {% if site.logo %}
 
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %} -->
-          <a href="#top"><img src="https://cdn.discordapp.com/attachments/806343355264401478/820076457690398751/GBG-team-logo-125.png" alt="Gas Brake Go"/><img src="https://cdn.discordapp.com/attachments/806343355264401478/820420574589091860/image2.png" alt="Info"/></a>
+          <a href="#top"><img src="https://cdn.discordapp.com/attachments/806343355264401478/820420574589091860/image2.png" alt="Info"/></a>
         <p>
           <!-- {{ site.description | default: site.github.project_tagline }} -->
 <a href="http://blog.hcr2.info">Log</a> - <a href="http://memes.hcr2.info">Memes</a> - <a href="https://fingersoft.com/news/">News</a> - <a href="https://mobile.twitter.com/HCR_Official_">Twts</a> -  <a href="https://www.youtube.com/results?search_query=hill+climb+racing+2+hcr2">uTube</a>  
 </p>
       <ul class="downloads">
-          <li><a href="http://wiki.hcr2.info">hcr2 <strong>wiki</strong></a></li>
+          <li><a href="http://blog.hcr2.info">Change <strong>log</strong></a></li>
           <li><a href="http://faq.hcr2.info">hcr2 <strong>faq</strong></a></li>
           <li><a href="http://tips.hcr2.info">hcr2 <strong>tips</strong></a></li>    
+          <li><a href="http://wiki.hcr2.info">hcr2 <strong>wiki</strong></a></li>
       </ul> 
         </center>
-                                                                                 
+        <ul class="downloads">
+          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
+          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+         </ul>                                                                        
    <!--     {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
@@ -66,9 +71,10 @@
   -->
 
         <center>
-        <p><a href="mailto:dadahcr2@gmail.com">Email</a> ~ dada#1710 ~ <a href="https://rentry.co/hcom1">Comment?</a></p>
         
-        <p><a href=""><img src="https://media.discordapp.net/attachments/806343355264401478/841864986590576660/2A8C00CC-70A7-4510-8847-09C3360CA512.png?width=120&amp;height=120" alt="Gas Brake Go"/></a></p>
+        
+        <p><a href=""><img src="https://cdn.discordapp.com/attachments/806343355264401478/820076457690398751/GBG-team-logo-125.png" alt="Gas Brake Go"/></a></p>
+        <p><a href="mailto:dadahcr2@gmail.com">Email</a> ~ dada#1710 ~ <a href="https://rentry.co/hcom1">Comment?</a></p>
         </center>
       </footer> 
     </div>
