--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
           <a href="#top"><img src="https://cdn.discordapp.com/attachments/806343355264401478/820420574589091860/image2.png" alt="Info"/></a>
         <p>
           <!-- {{ site.description | default: site.github.project_tagline }} -->
-<a href="http://blog.hcr2.info">Log</a> - <a href="http://memes.hcr2.info">Memes</a> - <a href="https://fingersoft.com/news/">News</a> - <a href="https://mobile.twitter.com/HCR_Official_">Twts</a> -  <a href="https://www.youtube.com/results?search_query=hill+climb+racing+2+hcr2">uTube</a>  
+<a href="http://memes.hcr2.info">Memes</a> - <a href="https://fingersoft.com/news/">News</a> - <a href="https://mobile.twitter.com/HCR_Official_">Tweets</a> -  <a href="https://www.youtube.com/results?search_query=hill+climb+racing+2+hcr2">YouTube</a>  
 </p>
       <ul class="downloads">
           <li><a href="http://blog.hcr2.info">Change <strong>log</strong></a></li>
