--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,12 +29,12 @@
           <!-- {{ site.description | default: site.github.project_tagline }} -->
 <a href="http://memes.hcr2.info">Memes</a> - <a href="https://fingersoft.com/news/">News</a> - <a href="https://mobile.twitter.com/HCR_Official_">Tweets</a> -  <a href="https://www.youtube.com/results?search_query=hill+climb+racing+2+hcr2">YouTube</a>  
   <br>
-          <a href="http://tips.hcr2.info">Tips</a> - <a href="#best-distance-parts-by-vehicle">AdvParts</a> - <a href="#tracks-by-map-type-and-distance">CupTracks</a> -  <a href="#daily-checklist">Checklist</a>  
+       <a href="http://blog.hcr2.info">log</a> - <a href="http://tips.hcr2.info">tips</a> - <a href="http://faq.hcr2.info">faq</a> - <a href="http://wiki.hcr2.info">wiki</a>
   </p>
       <ul class="downloads">
-          <li><a href="http://blog.hcr2.info">Change <strong>log</strong></a></li>
-          <li><a href="http://faq.hcr2.info">hcr2 <strong>faq</strong></a></li>
-          <li><a href="http://wiki.hcr2.info">hcr2 <strong>wiki</strong></a></li>
+          <li><a href="#best-distance-parts-by-vehicle">Adventure <strong>Parts</strong></a></li>
+          <li><a href="#tracks-by-map-type-and-distance">Cup <strong>Tracks</strong></a></li>
+          <li><a href="#daily-checklist">Daily <strong>Checklist</strong></a></li>
       </ul> 
         </center>
                                                                  
