--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,9 @@
           <a href="#top"><img src="https://cdn.discordapp.com/attachments/806343355264401478/820420574589091860/image2.png" alt="Info"/></a>
         <p>
           <!-- {{ site.description | default: site.github.project_tagline }} -->
-<a href="http://memes.hcr2.info">Memes</a> - <a href="https://fingersoft.com/news/">News</a> - <a href="https://mobile.twitter.com/HCR_Official_">Tweets</a> -  <a href="https://www.youtube.com/results?search_query=hill+climb+racing+2+hcr2">YouTube</a>  
+<a href="http://memes.hcr2.info">memes</a> - <a href="https://fingersoft.com/news/">news</a> - <a href="https://mobile.twitter.com/HCR_Official_">tweets</a> -  <a href="https://www.youtube.com/results?search_query=hill+climb+racing+2+hcr2">youtube</a>  
   <br>
-       <a href="http://blog.hcr2.info">log</a> - <a href="http://tips.hcr2.info">tips</a> - <a href="http://faq.hcr2.info">faq</a> - <a href="http://wiki.hcr2.info">wiki</a>
+       <a href="http://blog.hcr2.info">changes</a> - <a href="http://tips.hcr2.info">tips</a> - <a href="http://chests.hcr2.info">chests</a> - <a href="http://gm.hcr2.info">gm</a> - <a href="http://faq.hcr2.info">faq</a> - <a href="http://wiki.hcr2.info">wiki</a>
   </p>
       <ul class="downloads">
           <li><a href="#best-distance-parts-by-vehicle">Adventure <strong>Parts</strong></a></li>
