--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,7 @@
         <center>
         
         
-        <p><a href=""><img src="https://cdn.discordapp.com/attachments/806343355264401478/820076457690398751/GBG-team-logo-125.png" alt="Gas Brake Go"/></a></p>
+        <p><a href="#team-philosophy"><img src="https://cdn.discordapp.com/attachments/806343355264401478/820076457690398751/GBG-team-logo-125.png" alt="Gas Brake Go"/></a></p>
         <p><a href="mailto:dadahcr2@gmail.com">Email</a> ~ dada#1710 ~ <a href="https://rentry.co/hcom1">Comment?</a></p>
         </center>
       </footer> 
