--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,12 +24,12 @@
 
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %} -->
-          <a href="#top"><img src="https://cdn.discordapp.com/attachments/806343355264401478/820420574589091860/image2.png" alt="Info"/></a>
+          {{site.description}}
         <p>
           <!-- {{ site.description | default: site.github.project_tagline }} -->
-<a href="http://wiki.hcr2.info">Wiki</a> - <a href="https://fingersoft.com/news/">FS News</a> - <a href="https://mobile.twitter.com/HCR_Official_">FS Tweets</a> - <a href="https://www.youtube.com/results?search_query=hill+climb+racing+2+hcr2">YouTube</a>  
-  <br>
-       <a href="http://blog.hcr2info.com">Log</a> - <a href="http://tips.hcr2info.com">Tips</a> - <a href="http://chests.hcr2info.com">Chests</a> - <a href="http://memes.hcr2info.com">Memes</a> - <a href="http://gm.hcr2.info">GM</a> - <a href="http://faq.hcr2info.com">FAQ</a>
+{{lineone}}
+          <br>
+{{linetwo}}
   </p>
       <ul class="downloads">
           <li><a href="#best-distance-parts-by-vehicle">Adventure <strong>Parts</strong></a></li>
