--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,9 +32,9 @@
 {{linetwo}}
   </p>
       <ul class="downloads">
-          <li><a href="#best-distance-parts-by-vehicle">Adventure <strong>Parts</strong></a></li>
-          <li><a href="#tracks-by-map-type-and-distance">Cup <strong>Tracks</strong></a></li>
-          <li><a href="#daily-checklist">Daily <strong>Checklist</strong></a></li>
+          <li>{{buttonone}}</li>  
+          <li>{{buttontwo}}</li>  
+          <li>{{buttonthree}}</li>
       </ul> 
         </center>
                                                                  
@@ -70,8 +70,8 @@
         <center>
         
         
-        <p><a href="#team-philosophy"><img src="https://cdn.discordapp.com/attachments/806343355264401478/820076457690398751/GBG-team-logo-125.png" alt="Gas Brake Go"/></a></p>
-        <p><a href="mailto:dadahcr2@gmail.com">Email</a> ~ dada#1710 ~ <a href="https://rentry.co/hcom1">Comment?</a></p>
+        <p>{{footerone}}</p>
+        <p>{{footertwo}}</p>
         </center>
       </footer> 
     </div>
