--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,14 +27,14 @@
           {{site.description}}
         <p>
           <!-- {{ site.description | default: site.github.project_tagline }} -->
-{{lineone}}
+{{site.lineone}}
           <br>
-{{linetwo}}
+{{site.linetwo}}
   </p>
       <ul class="downloads">
-          <li>{{buttonone}}</li>  
-          <li>{{buttontwo}}</li>  
-          <li>{{buttonthree}}</li>
+          <li>{{site.buttonone}}</li>  
+          <li>{{site.buttontwo}}</li>  
+          <li>{{site.buttonthree}}</li>
       </ul> 
         </center>
                                                                  
@@ -70,8 +70,8 @@
         <center>
         
         
-        <p>{{footerone}}</p>
-        <p>{{footertwo}}</p>
+        <p>{{site.footerone}}</p>
+        <p>{{site.footertwo}}</p>
         </center>
       </footer> 
     </div>
